--- a/backend/package.json
+++ b/backend/package.json
@@ -22,9 +22,10 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.0",
+    "axios": "^1.10.0",
+    "cheerio": "^1.1.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1",
-    "axios": "^1.6.0"
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
