--- a/frontend/package.json
+++ b/frontend/package.json
@@ -58,14 +58,14 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "typescript": "^5.4.5",
+    "@types/node": "^20.11.30"
   },
   "devDependencies": {
-    "@types/node": "^20.11.30",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "postcss": "^8.5",
-    "tailwindcss": "^3.4.17",
-    "typescript": "^5.4.5"
+    "tailwindcss": "^3.4.17"
   }
 }
